--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Funding Rate Arbitrage - Python Dependencies
 
 # Core Framework
-fastapi>=0.109.0
+fastapi>=0.115.0
+starlette>=0.45.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
